--- a/package.json
+++ b/package.json
@@ -1,8 +1,37 @@
 {
+  
   "dependencies": {
-    "@slack/bolt": "^3.13.1",
-    "axios": "^1.4.0",
-    "node-fetch": "^3.3.1",
-    "ts-node": "^10.9.1"
+  
+    
+  "@slack/bolt": "^3.13.1",
+  
+    
+  "@types/isomorphic-fetch": "^0.0.36",
+  
+    
+  "axios": "^1.4.0",
+  
+    
+  "isomorphic-fetch": "^3.0.0",
+  
+    
+  "node-fetch": "^3.3.1",
+  
+    
+  "ts-node": "^10.9.1"
+  
+  },
+  
+  "devDependencies": {
+  
+    
+  "@types/node": "^20.1.0",
+  
+    
+  "@types/node-fetch": "^2.6.3",
+  
+    
+  "typescript": "^5.0.4"
+  
   }
 }
